--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   </head>
   <body>
     <div class="Container">
-      <header id="Home" class="menu">
+      <header id="Home">
         <div class="boxName">
           <h2 class="port"><b>Portifólio</b></h2>
           <h1 class="name">Marcos Chave</h1>
           <h2 id="title">Desenvolvedor Front-end</h2>
         </div>
-        <nav>
+        <nav class="menu">
           <ul>
             <li><a href="#Home">Home</a></li>
             <li><a href="#Sobre">Sobre</a></li>
@@ -228,7 +228,10 @@
 
       <section class="sectionA">
         <div class="boxCurriculo">
-          <a class="curriculo" href="./assets/Curriculo Dev.pdf" download="pdf"
+          <a
+            class="curriculo"
+            href="./assets/Currículo Dev - Marcos Chave.pdf"
+            download="pdf"
             >Currículo ↓</a
           >
           <img class="astron" src="./assets/astronalta.png" />
