--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
     <div class="Container">
       <header id="Home">
         <div class="boxName">
-          <h2 class="port"><b>Portifólio</b></h2>
-          <h1 class="name">Marcos Chave</h1>
-          <h2 id="title">Desenvolvedor Front-end</h2>
+          <div>
+            <h2 class="port"><b>Portifólio</b></h2>
+          </div>
+          <div class="name">
+            <h1>Marcos Chave</h1>
+            <h2 id="title">Desenvolvedor Front-end</h2>
+          </div>
         </div>
         <nav class="menu">
           <ul>
