--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
             <div class="swiper-slide project-slider">
               <a></a>
             </div>
+            <div class="swiper-slide project-slider">
+              <a></a>
+            </div>
           </div>
           <div class="swiper-button-prev arrow"></div>
           <div class="swiper-button-next arrow"></div>
