--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <p>Conversor de moedas</p>
                 <br />
                 <p class="descriçãoProjetos">
-                  Neste projeto criei uma aplicação de conversor de moeda que
-                  consome uma API dos valores em tempo real.
+                  Neste projeto criei uma aplicação de conversor de moeda com
+                  ReactJS que consome uma API dos valores em tempo real.
                 </p></a
               >
             </div>
@@ -85,8 +85,9 @@
                 <p>To do List</p>
                 <br />
                 <p class="descriçãoProjetos">
-                  Neste projeto criei uma aplicação de tarefas, podendo
-                  adicionar, concluir e deletar compromissos do dia a dia.
+                  Neste projeto criei uma aplicação de tarefas com ReactJS,
+                  podendo adicionar, concluir e deletar compromissos do dia a
+                  dia.
                 </p></a
               >
             </div>
@@ -250,24 +251,23 @@
         <div class="boxForm">
           <form
             action="https://formsubmit.co/marcosvtc7@outlook.com"
-            method="post"
-            enctype="text/plain"
+            method="POST"
           >
-            <h1>Entre em contato:</h1>
-            <label>Seu nome:</label>
-            <input name="Nome" type="text" class="inputUm Input" required />
-            <label>Seu E-mail:</label>
-            <input
-              name="email"
-              type="email"
-              class="inputDois Input"
-              required
-            /><br />
-            Sua mensagem:
-            <textarea name="mensagem" rows="5" required></textarea>
-            <div class="box-bt">
-              <input type="submit" value="Enviar" class="inputbt" />
-              <input type="reset" value="Limpar" class="inputbt" />
+            <label>
+              Nome:
+              <input class="inputUm" type="text" name="name" required />
+            </label>
+            <label>
+              E-mail:
+              <input class="inputDois" type="email" name="email" required />
+            </label>
+            <label>
+              Menssagem:
+              <textarea name="message" required></textarea>
+            </label>
+            <div class="boxbt">
+              <button class="inputbt" type="submit">Enviar</button>
+              <button class="inputbt" type="reset">Limpar</button>
             </div>
           </form>
         </div>
